// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeBlock should handle empty code snippets 1`] = `
<div
  className="code-block-wrapper"
>
  <pre
    className="code-block language-javascript"
  >
    
  </pre>
</div>
`;

exports[`CodeBlock should match snapshot 1`] = `
<div
  className="code-block-wrapper"
>
  <pre
    className="code-block"
  />
</div>
`;

exports[`CodeBlock should remove weird indentation from multi line snippets 1`] = `
<div
  className="code-block-wrapper"
>
  <pre
    className="code-block"
  >
    &lt;p&gt;
  Hello, World!
&lt;/p&gt;
  </pre>
</div>
`;

exports[`CodeBlock should remove weird indentation from multi line snippets 2`] = `
<div
  className="code-block-wrapper"
>
  <pre
    className="code-block"
  >
    &lt;p&gt;
  Hello, World!
&lt;/p&gt;
  </pre>
</div>
`;

exports[`CodeBlock should remove weird indentation from single line snippets 1`] = `
<div
  className="code-block-wrapper"
>
  <pre
    className="code-block"
  >
    console.log('test')
  </pre>
</div>
`;

exports[`CodeBlock should remove weird indentation from single line snippets 2`] = `
<div
  className="code-block-wrapper"
>
  <pre
    className="code-block"
  >
    console.log('test')
  </pre>
</div>
`;

exports[`CodeBlock should take an optional codeBlockName prop 1`] = `
<div
  className="code-block-wrapper"
>
  <div
    className="code-block-name"
  >
    <div
      className="code-block-language"
    >
      javascript
    </div>
    example
  </div>
  <pre
    className="code-block language-javascript"
  />
</div>
`;

exports[`CodeBlock should take an optional language prop 1`] = `
<div
  className="code-block-wrapper"
>
  <pre
    className="code-block language-javascript"
  />
</div>
`;
